(site/dev) allow ruka to scrape dev node_exporter instances

--- a/hieradata/site/dev.yaml
+++ b/hieradata/site/dev.yaml
@@ -61,5 +61,11 @@ profile::core::firewall::firewall:
     ipset: "ayekan src"
     dport: "9100"
     action: "accept"
+  "101 accept node_exporter":
+    proto: "tcp"
+    state: "NEW"
+    ipset: "dev src"  # allow ruka to access node_exporter
+    dport: "9100"
+    action: "accept"
 
 profile::core::docker::version: "24.0.9"
