(role/laserrpi) add profile::pi::ftdi

--- a/hieradata/role/laserrpi.yaml
+++ b/hieradata/role/laserrpi.yaml
@@ -3,4 +3,5 @@ classes:
   - "profile::core::common"
   - "profile::core::docker"
   - "profile::core::gpio"
+  - "profile::pi::ftdi"
   - "profile::pi::pigpio"
