--- a/hieradata/site/tu/role/foreman.yaml
+++ b/hieradata/site/tu/role/foreman.yaml
@@ -17,10 +17,10 @@ profile::core::foreman::foreman_hostgroup:
 
 profile::core::foreman::smee_url: "https://smee.io/lpxrggGObEn5YTA"
 puppet::server::puppetdb::server: "puppetdb.tu.lsst.org"
-profile::core::foreman::foreman_global_parameter:
-  disk_enc_tang_servers:  # XXX not idempotent
-    parameter_type: "json"
-    value: '["tang01.tu.lsst.org:7500", "tang02.tu.lsst.org:7500", "tang03.tu.lsst.org:7500"]'
+#profile::core::foreman::foreman_global_parameter:
+#  disk_enc_tang_servers:  # XXX not idempotent
+#    parameter_type: "json"
+#    value: '["tang01.tu.lsst.org:7500", "tang02.tu.lsst.org:7500", "tang03.tu.lsst.org:7500"]'
 
 r10k::sources:
   control:
