--- a/hieradata/cluster/ruka.yaml
+++ b/hieradata/cluster/ruka.yaml
@@ -3,28 +3,38 @@ clustershell::groupmembers:
   ruka: {group: "ruka", member: "ruka[01-05]"}
 profile::core::rke::enable_dhcp: true
 nm::connections:
+  br2101:
+    content:
+      connection:
+        id: "br2101"
+        uuid: "488bf841-4a72-4e02-af3c-34a64493d677"
+        type: "bridge"
+        interface-name: "br2101"
+      ethernet: {}
+      bridge:
+        stp: "false"
+      ipv4:
+        method: "disabled"
+      ipv6:
+        method: "disabled"
+      proxy: {}
   br2505:
-    content: |
-      [connection]
-      id=br2505
-      uuid=61800cc2-7bf7-4463-de5a-25e7d7c355a4
-      type=bridge
-      interface-name=br2505
-
-      [ethernet]
-
-      [bridge]
-      stp=false
-
-      [ipv4]
-      method=disabled
-      route1=139.229.153.0/24
-      route1_options=table=2505
-      route2=0.0.0.0/0,139.229.153.254
-      route2_options=table=2505
-      routing-rule1=priority 100 from 139.229.153.64/26 table 2505
-
-      [ipv6]
-      method=disabled
-
-      [proxy]
+    content:
+      connection:
+        id: "br2505"
+        uuid: "61800cc2-7bf7-4463-de5a-25e7d7c355a4"
+        type: "bridge"
+        interface-name: "br2505"
+      ethernet: {}
+      bridge:
+        stp: "false"
+      ipv4:
+        method: "disabled"
+        route1: "139.229.153.0/24"
+        route1_options: "table=2505"
+        route2: "0.0.0.0/0,139.229.153.254"
+        route2_options: "table=2505"
+        routing-rule1: "priority 100 from 139.229.153.64/26 table 2505"
+      ipv6:
+        method: "disabled"
+      proxy: {}
