(node/perfsonar1.ls.lsst.org) add routes for es.net pS nodes

--- a/hieradata/node/perfsonar1.ls.lsst.org.yaml
+++ b/hieradata/node/perfsonar1.ls.lsst.org.yaml
@@ -75,7 +75,7 @@ network::interfaces_hash:
 
 network::hostname: "%{facts.fqdn}"
 network::mroutes_hash:
-  p2p1.360:
+  p2p1.360:  # owamp
     routes:
       "139.229.140.134/31": "p2p1.360"
       "139.229.140.0/22": &via "139.229.140.134"
@@ -84,7 +84,7 @@ network::mroutes_hash:
       "10.125.0.0/20": *via
       "198.17.196.0/24": *via  # approximated
       "198.32.252.39/32": *via
-      "198.32.252.192/31": *via  # miami throughput
+      "198.32.252.192/31": *via  # miami
       "198.32.252.208/31": *via
       "198.32.252.210/31": *via
       "198.32.252.216/31": *via
@@ -94,7 +94,12 @@ network::mroutes_hash:
       "199.36.153.8/30": *via
       "134.79.235.226/32": *via  # SLAC IT-3892
       "134.79.235.242/32": *via  # SLAC IT-3892
-  p2p2.370:
+      "198.124.226.194/32": *via  # es.net IT-5332
+      "198.124.226.198/32": *via  # es.net IT-5332
+      "198.124.226.202/32": *via  # es.net IT-5332
+      "198.124.226.206/32": *via  # es.net IT-5332
+
+  p2p2.370:  # iperf
     routes:
       "139.229.140.136/31": "p2p2.370"
       "139.229.140.0/22": &via "139.229.140.136"
@@ -102,7 +107,11 @@ network::mroutes_hash:
       "10.128.0.0/20": *via
       "10.125.0.0/20": *via
       "198.17.196.0/24": *via  # approximated
-      "198.32.252.194/31": *via  # miami latency
+      "198.32.252.194/31": *via  # miami
       "199.36.153.8/30": *via
       "134.79.235.226/32": *via  # SLAC IT-3892
       "134.79.235.242/32": *via  # SLAC IT-3892
+      "198.124.226.130/32": *via  # es.net IT-5332
+      "198.124.226.134/32": *via  # es.net IT-5332
+      "198.124.226.138/32": *via  # es.net IT-5332
+      "198.124.226.142/32": *via  # es.net IT-5332
