--- a/hieradata/role/ccs-mcm.yaml
+++ b/hieradata/role/ccs-mcm.yaml
@@ -19,9 +19,12 @@ profile::ccs::tomcat::jars:
   "h2-1.4.191.jar": "https://repo1.maven.org/maven2/com/h2database/h2/1.4.191/h2-1.4.191.jar"
 profile::ccs::tomcat::wars:
   CCSWebTrending.war:
-    war_source: "https://repo-nexus.lsst.org/nexus/repository/ccs-maven2-public/org/lsst/CCSWebTrending/2.2/CCSWebTrending-2.2.war"
+    war_source: "https://repo-nexus.lsst.org/nexus/repository/ccs-maven2-public/org/lsst/CCSWebTrending/2.3/CCSWebTrending-2.3.war"
   CCSImageUtilities.war:
     war_source: "https://repo-nexus.lsst.org/nexus/repository/ccs-maven2-public/org/lsst/org-lsst-ccs-image-utilities-war/3.1.18/org-lsst-ccs-image-utilities-war-3.1.18.war"
+  rest.war:
+    war_source: "https://repo-nexus.lsst.org/nexus/repository/ccs-maven2-public/org/lsst/org-lsst-ccs-localdb-war/4.1.39/org-lsst-ccs-localdb-war-4.1.39.war"
+
 
 profile::core::systemd::tmpfile:
   docker_tmp.conf:  # XXX short term kludge
