--- a/hieradata/cluster/comcam-ccs.yaml
+++ b/hieradata/cluster/comcam-ccs.yaml
@@ -118,3 +118,5 @@ ccs_software::installations:
 daq::daqsdk::purge: false
 
 daq::daqsdk::version: "R5-V8.1"
+
+profile::ccs::tomcat::trending_site: "%{lookup('ccs_instrument')}"
