(role/hypervisor) set /vm to 0750 qemu:qemu
Resolves:

    virsh # start foreman
    error: Failed to start domain 'foreman'
    error: internal error: process exited while connecting to monitor: 2024-05-22T15:06:01.032485Z qemu-kvm: -blockdev {"driver":"file","filename":"/vm/foreman.qcow2","node-name":"libvirt-2-storage","auto-read-only":true,"discard":"unmap"}: Could not open '/vm/foreman.qcow2': Permission denied

--- a/hieradata/role/hypervisor.yaml
+++ b/hieradata/role/hypervisor.yaml
@@ -36,6 +36,11 @@ files:
     owner: "root"
     group: "root"
     mode: "0644"
+  /vm:
+    ensure: "directory"
+    owner: "qemu"
+    group: "qemu"
+    mode: "0750"
 ssh::server::match_block:
   foreman:
     type: "user"
