--- a/hieradata/cluster/ruka/variant/r430.yaml
+++ b/hieradata/cluster/ruka/variant/r430.yaml
@@ -34,7 +34,8 @@ nm::connections:
         interface-name: "enp5s0f1.2101"
         master: "br2101"
         slave-type: "bridge"
-      ethernet: {}
+      ethernet:
+        cloned-mac-address: "stable"
       vlan:
         flags: "1"
         id: "2101"
@@ -49,7 +50,8 @@ nm::connections:
         interface-name: "enp5s0f1.2505"
         master: "br2505"
         slave-type: "bridge"
-      ethernet: {}
+      ethernet:
+        cloned-mac-address: "stable"
       vlan:
         flags: "1"
         id: "2505"
