(cluster/*) set ceph cluster tuned profile to latency-performance
It was mentioned in a Ceph Days talk that this may improve the
consistentcy of ceph benchmarks.

--- a/hieradata/cluster/antu.yaml
+++ b/hieradata/cluster/antu.yaml
@@ -3,7 +3,7 @@ clustershell::groupmembers:
   antu:
     group: "antu"
     member: "antu[01-04]"
-
+tuned::active_profile: "latency-performance"
 nm::connections:
   enp65s0f0.2130:
     content:
