--- a/hieradata/cluster/manke.yaml
+++ b/hieradata/cluster/manke.yaml
@@ -5,6 +5,7 @@ clustershell::groupmembers:
     member: "manke[01-10]"
 profile::core::ospl::enable_rundir: true
 profile::core::k8snode::enable_dhcp: true
+tuned::active_profile: "latency-performance"
 nm::connections:
   eno1np0:
     content:
