--- a/hieradata/cluster/yagan.yaml
+++ b/hieradata/cluster/yagan.yaml
@@ -3,3 +3,4 @@ clustershell::groupmembers:
   yagan: {group: "yagan", member: "yagan[01-20]"}
 profile::core::k8snode::enable_dhcp: true
 profile::core::ospl::enable_rundir: true
+tuned::active_profile: "latency-performance"
