--- a/hieradata/cluster/konkong.yaml
+++ b/hieradata/cluster/konkong.yaml
@@ -3,6 +3,7 @@ clustershell::groupmembers:
   konkong: {group: "konkong", member: "konkong[01-03]"}
 profile::core::ospl::enable_rundir: true
 profile::core::k8snode::enable_dhcp: true
+tuned::active_profile: "latency-performance"
 nm::connections:
   eno1np0:
     content: |
