--- a/hieradata/cluster/kueyen.yaml
+++ b/hieradata/cluster/kueyen.yaml
@@ -3,6 +3,7 @@ clustershell::groupmembers:
   kueyen: {group: "kueyen", member: "kueyen[01-03]"}
 profile::core::ospl::enable_rundir: true
 profile::core::k8snode::enable_dhcp: true
+tuned::active_profile: "latency-performance"
 nm::connections:
   em1:  #PXE Boot
     content: |
