(node/lsstcam-quad.cp) add ccs services

--- a/hieradata/node/lsstcam-quad.cp.lsst.org.yaml
+++ b/hieradata/node/lsstcam-quad.cp.lsst.org.yaml
@@ -30,3 +30,9 @@ nm::connections:
       ipv6:
         method: "disabled"
       proxy: {}
+
+ccs_software::services:
+  prod:
+    - "mpm"
+    - "quadbox"
+    - "utiltrunk"
