(cluster/comcam-ccs) switch to java17
This removes a tu site-specific setting.

--- a/hieradata/cluster/comcam-ccs.yaml
+++ b/hieradata/cluster/comcam-ccs.yaml
@@ -67,6 +67,8 @@ ccs_monit::alert:
 
 java_artisanal::package: "jdk1.8"
 java_artisanal::dir: "jdk1.8.0_202-amd64"
+java_artisanal::set_alternatives: false
+java_artisanal::java17::set_alternatives: true
 
 accounts::group_list:
   lsstadm:
