--- a/hieradata/node/comcam-lion03.cp.lsst.org.yaml
+++ b/hieradata/node/comcam-lion03.cp.lsst.org.yaml
@@ -5,16 +5,31 @@ ccs_software::services:
     - "pathfinder"
     - "hexvalves"
 
-network::interfaces_hash:
-  enp0s31f6:  # fqdn
-    bootproto: "dhcp"
-    defroute: "yes"
-    onboot: "yes"
-    type: "Ethernet"
-  enp3s0:  # 192.168.1.0/24
-    bootproto: "none"
-    ipaddress: "192.168.1.124"
-    netmask: "255.255.255.0"
-    nozeroconf: "yes"
-    onboot: "yes"
-    type: "Ethernet"
+nm::connections:
+  enp0s31f6:
+    content:
+      connection:
+        id: "enp0s31f6"
+        uuid: "971b5cf2-4a99-4e5c-86f7-db509ebd602f"
+        type: "ethernet"
+        interface-name: "enp0s31f6"
+      ethernet: {}
+      ipv4:
+        method: "auto"
+      ipv6:
+        method: "disabled"
+      proxy: {}
+  enp3s0:
+    content:
+      connection:
+        id: "enp3s0"
+        uuid: "edb4ebb1-6d05-427b-b6ea-d483bdf32ec7"
+        type: "ethernet"
+        interface-name: "enp3s0"
+      ethernet: {}
+      ipv4:
+        method: "manual"
+        address1: "192.168.1.124/24"
+      ipv6:
+        method: "disabled"
+      proxy: {}
