(node/lsstcam-pcs01.cp) add ccs services chiller, refrig
(node/lsstcam-vw05.ls.lsst.org) provision host as EL9 & add test

(node/lsstcam-pcs01.cp.lsst.org) provision host as EL9 & add test

--- a/hieradata/node/lsstcam-pcs01.cp.lsst.org.yaml
+++ b/hieradata/node/lsstcam-pcs01.cp.lsst.org.yaml
@@ -30,3 +30,8 @@ nm::connections:
       ipv6:
         method: "disabled"
       proxy: {}
+
+ccs_software::services:
+  prod:
+    - "chiller"
+    - "refrig"
