(site/ls/cluster/auxtel-ccs) bump ts_sal_utils version

--- a/hieradata/site/ls/cluster/auxtel-ccs.yaml
+++ b/hieradata/site/ls/cluster/auxtel-ccs.yaml
@@ -2,6 +2,9 @@
 ccs_site: "base"
 ccs_sal::dds_interface: "auxtel-mcm-dds.ls.lsst.org"
 
+ccs_sal::rpms:
+  ts_sal_utils: "ts_sal_utils-8.0.0-1.x86_64.rpm"
+
 ## base-teststand-alerts
 ccs_software::service_email: "base-teststand-alerts-aaaai5j4osevcaaobtog67nxlq@lsstc.slack.com"
 
