--- a/hieradata/cluster/antu/role/rke.yaml
+++ b/hieradata/cluster/antu/role/rke.yaml
@@ -2,3 +2,4 @@
 classes:
   - "profile::core::sysctl::rp_filter"
 profile::core::sysctl::rp_filter::enable: false
+profile::core::rke::version: "1.5.9"
