(node/lsstcam-dc02.cp) do not add image-handling service

--- a/hieradata/node/lsstcam-dc02.cp.lsst.org.yaml
+++ b/hieradata/node/lsstcam-dc02.cp.lsst.org.yaml
@@ -20,3 +20,12 @@ nm::connections:
       method=ignore
 
       [proxy]
+
+## The role ccs-dc adds the image-handling service to all lsstcam-dc*.cp nodes.
+## However, dc02.cp is a special case, where the service should not be present.
+lookup_options:
+  ccs_software::services:
+    merge:
+      strategy: "first"
+
+ccs_software::services:
