--- a/hieradata/site/cp/cluster/lsstcam-ccs.yaml
+++ b/hieradata/site/cp/cluster/lsstcam-ccs.yaml
@@ -10,3 +10,8 @@ clustershell::groupmembers:
   quadbox: {group: "quadbox", member: "lsstcam-fcs,lsstcam-quad,lsstcam-rebps,lsstcam-vac"}
   uno: {group: "uno", member: "lsstcam-ccobtb,lsstcam-ccobwb,lsstcam-pcs[01-02]"}
   vw: {group: "vw", member: "lsstcam-vw[01-02,04]"}
+
+ccs_software::installations:
+  lsstcam-software-1.0.11:
+    aliases:
+      - "puppet-1.0.11"
