--- a/hieradata/site/cp/cluster/auxtel-ccs.yaml
+++ b/hieradata/site/cp/cluster/auxtel-ccs.yaml
@@ -1,4 +1,7 @@
 ---
+ccs_sal::rpms:
+  ts_sal_utils: "ts_sal_utils-8.0.0-1.x86_64.rpm"
+
 ccs_software::installations:
   ats-software-2.3.10:
     aliases:
