--- a/hieradata/site/cp/cluster/lsstcam-ccs.yaml
+++ b/hieradata/site/cp/cluster/lsstcam-ccs.yaml
@@ -11,6 +11,9 @@ clustershell::groupmembers:
   uno: {group: "uno", member: "lsstcam-ccobtb,lsstcam-ccobwb,lsstcam-pcs[01-02]"}
   vw: {group: "vw", member: "lsstcam-vw[01-02,04]"}
 
+ccs_sal::rpms:
+  ts_sal_utils: "ts_sal_utils-8.0.0-1.x86_64.rpm"
+
 ccs_software::installations:
   lsstcam-software-1.0.11:
     aliases:
